Backported improvements and fixes from the ipv6 branch.
* Fix setting device scanning interval
* Update user agents
* Fix NPE in ProblematicRouterDetection
* Improve diagnostics report (now in zip format)
* [#261] Show blocked trackings and ads on URLs with path
* [#250, #258, #262] Improve eBlocker Mobile